# scOmicPipeline

./: .gitignore  README.md  Snakefile  env_requirements.yml  example_run.sh  rank_genes_groups_r1.0_test.csv  requirements.txt  scRNAPipeline.py  setup.cfg
.github/workflows/: python-publish-pypi.yml  python-publish-test.yml  python-publish.yml
bash_pipeline/: README.md  annotate_5.py  cluster_2.py  helpers.py  marker_gene_3.py  plot_markers_4.py  qc_1.py  run_scanpy.sh  scRNAPipeline  scRNAPipeline.py
config/: annotation_arguments.txt  cluster_arguments.txt  config_snakemake_bash.yaml  marker_arguments.txt  plotting_arguments.txt  qc_arguments.txt
data/reference_markers/: marker_panglao_brain_dic_update.json
lib/: cluster_specific.py
src/scrnapipeline/: cluster_2.py  plot_markers_4.py  qc_1.py  scrnapipeline.py  test_args.py  test_import.py
src/scrnapipeline/utils/: helpers.py
