[metadata]
name = card_scrnaseq_pipeline
version = 1.1.11
description = A collection of command-line wrappers for scanpy scRNA-seq
author = Lirong Peng and Nicholas Johnson
author_email = nicholas.larue.johnson@gmail.com
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Topic :: Scientific/Engineering :: Bio-Informatics
url = https://github.com/NIH-CARD/scOmicPipeline
readme = README.md
#scripts = src/scrnapipeline/scrnapipeline.py

[options]
packages_dir=
    =src
packages=find:

install_requires =
    anndata==0.8.0
    h5py==3.7.0
    matplotlib==3.6.1
    numpy==1.23.3
    pandas==1.5.0
    scanpy==1.9.1
    scvi-tools==0.18.0
    seaborn==0.12.0
    torch
    leidenalg==0.9.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    scrnapipeline = scrnapipeline.scrnapipeline:main

