[metadata]
name = card_scrnaseq_pipeline
version = 1.1.21
description = A collection of command-line wrappers for scanpy scRNA-seq
author = Lirong Peng and Nicholas Johnson
author_email = nicholas.larue.johnson@gmail.com
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Topic :: Scientific/Engineering :: Bio-Informatics
url = https://github.com/NIH-CARD/scOmicPipeline
readme = README.md
#scripts = src/scrnapipeline/scrnapipeline.py

[options]
package_dir=
    =src
packages=find:

py_modules=
    helpers
    
install_requires =
   anndata
   h5py
   leidenalg
   matplotlib
   numpy
   pandas
   pymde
   scanpy
   scvi-tools
   seaborn
   torch

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    scrnapipeline = scrnapipeline.scrnapipeline:main

